--- a/designSite/static/css/design.css
+++ b/designSite/static/css/design.css
@@ -9,6 +9,9 @@
   filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.7));
   transition: all 0.2s ease;
 }
+#operation>img {
+  margin-right: 0;
+}
 #logo {
   height: 1.75rem;
   width: auto
@@ -135,7 +138,7 @@
   border-radius: 10px;
   background-color: #404040;
   z-index: 15;
-  padding: 1rem 2rem;
+  padding: 0.5rem 1rem 0.5rem 1rem;
   opacity: 0.3;
   transition: opacity 0.2s ease, left 0.2s ease;
 }
@@ -163,12 +166,13 @@ body {
   overflow: hidden;
 }
 div.ui.fixed.menu {
-  background-color: #e2e7ea;
+  background-color: #e2e7ea; /*menu background color*/
 }
 div.ui.fixed.menu>div.ui.container {
   margin-left: 3rem !important;
   margin-right: 3rem !important;
   width: 100%;
+  height: 3rem;
 }
 .item>i.icon {
   margin: 0 0.25rem !important;
@@ -298,4 +302,9 @@ div.part-helper>div.ui.image>img {
 }
 .plasmid-edit>form {
   margin-bottom: 0;
+}
+
+.ui.vertical.menu {
+  /* padding-top: 4.5rem; */
+  width: 4rem;
 }
