Update the account app

--- a/designSite/account/templates/personal_index.html
+++ b/designSite/account/templates/personal_index.html
@@ -1,8 +1,8 @@
 <html>
 
 <body>
-    This is the index page.
     {% if user.is_authenticated %}
+        <p>{{ user.email }}</p>
         You've log in.
         <button id="logout">Logout</button>
     {% else %}
