--- a/designSite/design/templates/design.html
+++ b/designSite/design/templates/design.html
@@ -283,7 +283,23 @@
               <div class="default text">Part type</div>
             </div>
         </div>
+          <!-- Part safety level is not used -->
+          <!-- <div class="field">
+            <div class="ui floating selection dropdown" id="part-safety-dropdown">
+              <i class="dropdown icon"></i>
+              <div class="default text">Part safety level</div>
+            </div>
+          </div> -->
+        <div class="field">
+          <textarea name="part-sequence" id="part-sequence" placeholder="Part sequence"></textarea>
+        </div>
+        
       </form>
+    </div>
+    <div class="actions">
+      <div class="ui one bottom attached big buttons">
+        <div id="add-new-part" class="ui white button">Add this part to database!</div>
+      </div>
     </div>
   </div>
 
@@ -306,7 +322,7 @@
         <div class="disabled field">
           <label>Version</label>
           <input type="text" name="component-version" placeholder="1" disabled="">
-        </div>
+        </divdiv>
         <div class="field">
           <label>Description</label>
           <textarea rows="2" name="component-description"></textarea>
@@ -316,27 +332,6 @@
           <textarea name="component-sequence"></textarea>
         </div>
       </form>
-    </div>
-  </div>
-
-
-          <!-- Part safety level is not used -->
-          <!-- <div class="field">
-            <div class="ui floating selection dropdown" id="part-safety-dropdown">
-              <i class="dropdown icon"></i>
-              <div class="default text">Part safety level</div>
-            </div>
-          </div> -->
-        <div class="field">
-          <textarea name="part-sequence" id="part-sequence" placeholder="Part sequence"></textarea>
-        </div>
-        
-      </form>
-    </div>
-    <div class="actions">
-      <div class="ui one bottom attached big buttons">
-        <div id="add-new-part" class="ui white button">Add this part to database!</div>
-      </div>
     </div>
   </div>
 
