--- a/designSite/design/templates/design.html
+++ b/designSite/design/templates/design.html
@@ -104,9 +104,19 @@
           </h4>
         </span>
       </div>
-      <span class="item">
+
+<!-- Temporarily comment the logo -->
+      <!-- <span class="item">
         <a href="/">
           <img id="logo" src="/static/img/logo-black.png">
+        </a>
+      </span> -->
+
+
+
+      <span class="item">
+        <a href="/account/">
+          <p>Account</p>
         </a>
       </span>
     </div>
