--- a/designSite/design/templates/design.html
+++ b/designSite/design/templates/design.html
@@ -206,7 +206,7 @@
   </div>
 
   <!-- Component Parts -->
-  <div id="components-menu" class="ui bottom fixed menu">
+  <!-- <div id="components-menu" class="ui bottom fixed menu">
     <a class="item" data-content="Add a DNA">
       <img src="/static/img/design/other_dna.png">
       <i>DNA</i>
@@ -231,7 +231,7 @@
       <img src="/static/img/design/rna.png">
       <i>RNA</i>
     </a>
-  </div>
+  </div> -->
 
   <!-- Configure component info -->
   <div id="component-info-modal" class="ui tiny modal">
