[feature] finish inspect item

--- a/designSite/design/templates/design.html
+++ b/designSite/design/templates/design.html
@@ -311,21 +311,21 @@
           <label>Part role</label>
           <input type="text" name="component-role" placeholder="part role" disabled="">
         </div>
-        <div class="field">
+        <div class="disabled field">
           <label>Display ID</label>
           <input type="text" name="component-id" placeholder="display id">
         </div>
-        <div class="field">
+        <div class="disabled field">
           <label>Name</label>
           <input type="text" name="component-name">
         </div>
         <div class="disabled field">
           <label>Version</label>
           <input type="text" name="component-version" placeholder="1" disabled="">
-        </divdiv>
+        </div>
         <div class="field">
           <label>Description</label>
-          <textarea rows="2" name="component-description"></textarea>
+          <textarea rows="6" name="component-description"></textarea>
         </div>
         <div class="field">
           <label>DNA Sequence</label>
