--- a/designSite/design/templates/design.html
+++ b/designSite/design/templates/design.html
@@ -173,8 +173,12 @@
         <i class="dropdown icon"></i>
         <div class="default text">Search BBa...</div>
       </div>
+      <div id="advanced-search">
+          <a>Advanced Search</a>
+      </div>
+    
 
-
+      <!-- Source circuit part has been redesigned -->
       <!-- <div class="tab-context">
         <div class="ui top attached tabular menu">
           <div class="active item" data-tab="src-tab">Source circuit</div>
@@ -183,6 +187,9 @@
           <ul class="ui list" id="source-list"></ul>
         </div>
       </div> -->
+
+
+
       <div class="tab-context">
         <div class="ui top attached tabular menu">
           <div class="active item" data-tab="info-tab">Part information</div>
@@ -213,34 +220,6 @@
     <div class="content">
     </div>
   </div>
-
-  <!-- Component Parts -->
-  <!-- <div id="components-menu" class="ui bottom fixed menu">
-    <a class="item" data-content="Add a DNA">
-      <img src="/static/img/design/other_dna.png">
-      <i>DNA</i>
-    </a>
-    <a class="item" data-content="Add a promoter">
-      <img src="/static/img/design/promoter.png">
-      <i>PRO</i>
-    </a>
-    <a class="item" data-content="Add a CDS">
-      <img src="/static/img/design/cds.png">
-      <i>CDS</i>
-    </a>
-    <a class="item" data-content="Add a RBS">
-      <img src="/static/img/design/rbs.png">
-      <i>RBS</i>
-    </a>
-    <a class="item" data-content="Add a terminator">
-      <img src="/static/img/design/terminator.png">
-      <i>TER</i>
-    </a>
-    <a class="item" data-content="Add a RNA">
-      <img src="/static/img/design/rna.png">
-      <i>RNA</i>
-    </a>
-  </div> -->
 
   <!-- Configure component info -->
   <div id="component-info-modal" class="ui tiny modal">
@@ -369,6 +348,12 @@
     </div>
   </div>
 
+  <!-- Advanced Search Modal -->
+  <div id="advanced-search-modal" class="ui tiny modal">
+    <div class="content">
+      You got it
+    </div>
+  </div>
 
   <!-- Clear all modal -->
   <div id="clear-all-modal" class="ui basic modal">
