remove favourite and safety

--- a/designSite/design/templates/design.html
+++ b/designSite/design/templates/design.html
@@ -104,13 +104,13 @@
         </div>
       </span>
 
-      <div class="right menu">
+      <!-- <div class="right menu">
         <span class="item">
           <h4 id="safety" class="ui green header">Low risk
             <img src="/static/img/design/safety-1.png">
           </h4>
         </span>
-      </div>
+      </div> -->
 
 <!-- Temporarily comment the logo -->
       <!-- <span class="item">
@@ -119,9 +119,7 @@
         </a>
       </span> -->
 
-
-
-      <span class="item">
+      <span id="logo" class="item">
         <a href="/account/">
           <p>Account</p>
         </a>
@@ -130,9 +128,10 @@
   </div>
 
   <div class="ui labeled left inline vertical sidebar menu">
-    <a class="item" id="open-fav-win">
+    <!-- Comment favourite -->
+    <!-- <a class="item" id="open-fav-win">
       <img src="/static/img/design/favorite.png">
-    </a>
+    </a> -->
     <a class="item" id="load-button">
       <img src="/static/img/design/load.png">
     </a>
@@ -204,15 +203,15 @@
     </div>
   </div>
 
-  <!-- Favourite window (floating) -->
-  <div id="fav-win" class="window">
+  <!-- Comment Favourite window (floating) -->
+  <!-- <div id="fav-win" class="window">
     <div class="nav">
       <h5 class="ui header">Favourite</h5>
       <i id="fav-win-button" class="link icon remove"></i>
     </div>
     <div class="content">
     </div>
-  </div>
+  </div> -->
 
   <!-- Component Parts -->
   <!-- <div id="components-menu" class="ui bottom fixed menu">
