--- a/designSite/design/templates/design.html
+++ b/designSite/design/templates/design.html
@@ -168,6 +168,17 @@
       <i id="part-panel-button" class="link icon angle double right"></i>
     </div>
     <div class="content">
+      <div>
+        <h5>Chassis</h5><br>
+      </div>
+      <div class="ui compact floating selection dropdown" id="chassis-dropdown">
+        <div class="text" id="chassis"></div>
+        <i class="dropdown icon"></i>
+      </div>
+      <div class="ui divider"></div>
+      <div>
+        <h5>Parts</h5><br>
+      </div>
       <div id="search-parts-dropdown" class="ui fluid search selection dropdown">
         <i class="dropdown icon"></i>
         <div class="default text">Search BBa...</div>
