--- a/designSite/design/templates/test.html
+++ b/designSite/design/templates/test.html
@@ -2,7 +2,7 @@
 
 <head>
   <title>Get SBOL</title>
-  <link rel="shortcut icon" href="/static/img/favicon.png">
+  <!-- <link rel="shortcut icon" href="/static/img/favicon.png"> -->
   <link rel="stylesheet" href="/static/semantic/dist/semantic.min.css">
 </head>
 
